# OTUS_HOMEWORK_4

./: .travis.yml  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Doxyfile  _config.yml  cmake_install.cmake  index.html  is_suitable_container.h  otus_hw_4_test  otus_hw_4_test.cpp  print_ip  print_ip-0.0.1-Linux.deb  print_ip-0.0.2-Linux.deb  print_ip-0.0.3-Linux.deb  print_ip-0.0.4-Linux.deb  print_ip.cpp  process.cpp  process.h
Testing/Temporary/: CTestCostData.txt
docs/: _config.yml
docs/html/: annotated.html  classes.html  files.html  globals.html  globals_defs.html  globals_func.html  hierarchy.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherits.html  is__suitable__container_8h.html  is__suitable__container_8h__dep__incl.map  is__suitable__container_8h__dep__incl.md5  is__suitable__container_8h__incl.md5  is__suitable__container_8h_source.html  main_8cpp.html  otus__hw__4__test_8cpp.html  otus__hw__4__test_8cpp__incl.map  otus__hw__4__test_8cpp__incl.md5  print__ip_8cpp.html  print__ip_8cpp__incl.map  print__ip_8cpp__incl.md5  process_8cpp.html  process_8cpp__incl.map  (+45 more)
html/: annotated.html  classes.html  files.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html  is__suitable__container_8h.html  is__suitable__container_8h__dep__incl.map  is__suitable__container_8h__dep__incl.md5  is__suitable__container_8h__incl.map  is__suitable__container_8h__incl.md5  is__suitable__container_8h_source.html  main_8cpp.html  otus__hw__4__test_8cpp.html  otus__hw__4__test_8cpp__incl.map  otus__hw__4__test_8cpp__incl.md5  print__ip_8cpp.html  print__ip_8cpp__incl.map  print__ip_8cpp__incl.md5  process_8cpp.html  process_8cpp__incl.map  process_8cpp__incl.md5  process_8h.html  process_8h__dep__incl.map  process_8h__dep__incl.md5  process_8h__incl.map  process_8h__incl.md5  process_8h_source.html  structare__same.html  structare__same_3_01_t1_00_01_t2_01_4.html  structare__same_3_01_t1_00_01_t2_01_4__coll__graph.md5  structare__same_3_01_t_00_01_t1_00_01_t2_01_4.html  structare__same_3_01_t_00_01_t1_00_01_t2_01_4__inherit__graph.md5  structare__same__coll__graph.md5  (+29 more)
(+33 files in other folders)
